# habit-tracker

./: .gitignore
.github/workflows/: deploy-frontend.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/controllers/: analytics.py  auth.py  habit.py  tracking_log.py  user.py
backend/app/core/: config.py  security.py  seeder.py  user_service.py
backend/app/crud/: __init__.py  crud_analytics.py  crud_habit_tracking_log.py  habit.py  role.py  user.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py  base.py  habit.py  habit_log.py  role.py  user.py
backend/app/schemas/: __init__.py  analytics.py  base.py  habit.py  habit_tracking_log.py  role.py  token.py  user.py
backend/persistence/: env.py
backend/persistence/versions/: 00c9e7cab527_change_habit_time_measure.py  37637af8c2ff_add_full_name_to_users.py  4e2154ac9b59_add_user_to_habit_tracking_log.py  6af858c0aa80_initial.py  812ea59dea21_added_habits_etc.py  9a5a0b53182b_add_server_defaults_to_timestamps_users.py  c2e9d2cbfadd_rename_icon_to_color_in_habit_category.py
frontend/: package-lock.json  package.json
frontend/public/: 404.html  index.html
frontend/src/: App.jsx  App.scss  index.js  store.js
frontend/src/components/: AddHabitLogModal.jsx  AddHabitLogModal.scss  AddHabitModal.jsx  AddHabitModal.scss  EditHabitModal.jsx  EditHabitModal.scss  HabitCard.jsx  HabitCard.scss  HabitStatisticsModal.jsx  HabitStatisticsModal.scss  LoginForm.jsx  LoginForm.scss  Navbar.css  Navbar.jsx  Navbar.scss  RegisterForm.jsx  RegisterForm.scss
frontend/src/pages/: AnalyticsPage.jsx  AnalyticsPage.scss  HomePage.jsx  HomePage.scss  LoginPage.jsx  LoginPage.scss  OnboardingPage.jsx  OnboardingPage.scss  RegisterPage.jsx  RegisterPage.scss
frontend/src/services/: api.js  authService.js
(+2 files in other folders)
